# test

menda/: README.txt
menda-plasma-desktop/: PKGBUILD  README.txt
menda-plasma-desktop/Menda/: colors  metadata.desktop
menda-plasma-desktop/Menda/icons/: konv_message.svgz
menda-plasma-desktop/Menda/widgets/: action-overlays.svgz  actionbutton.svgz  bar_meter_horizontal.svgz  bar_meter_vertical.svgz  button.svgz  clock.svgz  glowbar.svgz  listitem.svgz  media-delegate.svgz  scrollbar.svgz  slider.svgz  tabbar.svgz  tasks.svgz  viewitem.svgz
menda-plasma-look-feel/: PKGBUILD  README.txt
menda-plasma-look-feel/org.kde.menda.desktop/: metadata.desktop
menda-plasma-look-feel/org.kde.menda.desktop/contents/: defaults
menda-plasma-look-feel/org.kde.menda.desktop/contents/components/: LogoutScreen.qml  UserDelegate.qml  UserSelect.qml
menda-plasma-look-feel/org.kde.menda.desktop/contents/lockscreen/: LockScreen.qml
menda-plasma-look-feel/org.kde.menda.desktop/contents/loginmanager/: metadata.desktop
menda-plasma-look-feel/org.kde.menda.desktop/contents/splash/: Splash.qml
menda-plasma-look-feel/org.kde.menda.desktop/contents/splash/images/: kde-bak-2.svgz  kde-bak.svgz  kde.svgz
menda-sddm/: PKGBUILD  README.txt  sddm.conf  test_sddm_greeter
menda-sddm/menda/: Main.qml  metadata.desktop
menda-sddm/menda_DONT_USE_THIS_ONE/: Main.qml  metadata.desktop
menda-sddm/menda_DONT_USE_THIS_ONE/components/: InfoPane.qml  UserSelect.qml
menda/menda/: .reviewboardrc  CMakeLists.txt  COPYING-ICONS
menda/menda-git-pkgbuild/: PKGBUILD  PKGBUILD-old
menda/menda-kde4-git-pkgbuild/: PKGBUILD
menda/menda/kdecoration/: CMakeLists.txt  Messages.sh  config-menda.h.cmake  menda.h  menda.json  mendabutton.cpp  mendabutton.h  mendacolorsettings.cpp  mendacolorsettings.h  mendadecoration.cpp  mendadecoration.h  mendaexceptionlist.cpp  mendaexceptionlist.h  mendasettings.kcfgc  mendasettingsdata.kcfg  mendasettingsprovider.cpp  mendasettingsprovider.h  mendasizegrip.cpp  mendasizegrip.h
menda/menda/kdecoration/config/: mendaconfig.cpp  mendaconfig.h  mendaconfigwidget.cpp  mendaconfigwidget.h  mendadetectwidget.cpp  mendadetectwidget.h  mendaexceptiondialog.cpp  mendaexceptiondialog.h  mendaexceptionlistwidget.cpp  mendaexceptionlistwidget.h  mendaexceptionmodel.cpp  mendaexceptionmodel.h  mendaitemmodel.cpp  mendaitemmodel.h  mendalistmodel.h
menda/menda/kdecoration/config/ui/: mendaconfigurationui.ui  mendadetectwidget.ui  mendaexceptiondialog.ui  mendaexceptionlistwidget.ui
menda/menda/kstyle/: CMakeLists.txt  config-menda.h.cmake  menda.h  menda.json  menda.kcfg  menda.themerc  mendaaddeventfilter.cpp  mendaaddeventfilter.h  mendaframeshadow.cpp  mendaframeshadow.h  mendahelper.cpp  mendahelper.h  mendamdiwindowshadow.cpp  mendamdiwindowshadow.h  mendamnemonics.cpp  mendamnemonics.h  mendapropertynames.cpp  mendapropertynames.h  mendashadowhelper.cpp  mendashadowhelper.h  mendasplitterproxy.cpp  mendasplitterproxy.h  mendastyle.cpp  mendastyle.h  mendastyleconfigdata.kcfgc  mendastyleplugin.cpp  mendastyleplugin.h  mendatileset.cpp  mendatileset.h  mendawindowmanager.cpp  mendawindowmanager.h
menda/menda/kstyle/animations/: mendaanimation.cpp  mendaanimation.h  mendaanimationdata.cpp  mendaanimationdata.h  mendaanimations.cpp  mendaanimations.h  mendabaseengine.cpp  mendabaseengine.h  mendabusyindicatordata.cpp  mendabusyindicatordata.h  mendabusyindicatorengine.cpp  mendabusyindicatorengine.h  mendadatamap.h  mendadialdata.cpp  mendadialdata.h  mendadialengine.cpp  mendadialengine.h  mendaenabledata.cpp  mendaenabledata.h  mendagenericdata.cpp  mendagenericdata.h  mendaheaderviewdata.cpp  mendaheaderviewdata.h  mendaheaderviewengine.cpp  mendaheaderviewengine.h  mendascrollbardata.cpp  mendascrollbardata.h  mendascrollbarengine.cpp  mendascrollbarengine.h  mendaspinboxdata.cpp  mendaspinboxdata.h  mendaspinboxengine.cpp  mendaspinboxengine.h  mendatabbardata.cpp  mendatabbardata.h  mendatabbarengine.cpp  mendatabbarengine.h  mendatoolboxengine.cpp  mendatoolboxengine.h  mendawidgetstatedata.cpp  (+3 more)
menda/menda/kstyle/config/: CMakeLists.txt  Messages.sh  main.cpp  mendaconfigdialog.cpp  mendaconfigdialog.h  mendastyleconfig.cpp  mendastyleconfig.h
menda/menda/kstyle/config/ui/: mendaconfigdialog.ui  mendastyleconfig.ui
menda/menda/kstyle/debug/: mendawidgetexplorer.cpp  mendawidgetexplorer.h
menda/menda/misc/: CMakeLists.txt
menda/menda/misc/gtkmenda/: CMakeLists.txt  gtkmenda.upd  main.cpp
menda/menda/misc/kde4menda/: CMakeLists.txt
menda/menda/misc/kde4menda/src/: CMakeLists.txt  Messages.sh  kde4menda.upd  main.cpp
menda/menda/misc/qtcurvepreset/: CMakeLists.txt
menda/menda/qtquickcontrols/: CMakeLists.txt  Menda.qml  Menda.qmlproject  qmldir
menda/menda/wallpapers/: CMakeLists.txt
menda/menda/wallpapers/Menda/: metadata.desktop
